--- a/PRG/Tools/BuildingPainter/index.html
+++ b/PRG/Tools/BuildingPainter/index.html
@@ -8,8 +8,10 @@
 </head>
 
 <body>
-    <input type="range" id="slider" min="0" max="100" value="50">
-    <p id="slider-value">50</p>
+    <input type="range" id="slider1" min="0" max="100" value="25">
+    <p id="slider1-value">X = 25</p>
+    <input type="range" id="slider2" min="0" max="100" value="60">
+    <p id="slider2-value">Y = 60</p>
     <script src="sketch.js"></script>
 </body>
 
