(BuildingPainter) Clear/Fill/Toggle ボタンを追加

--- a/PRG/Tools/BuildingPainter/index.html
+++ b/PRG/Tools/BuildingPainter/index.html
@@ -8,10 +8,18 @@
 </head>
 
 <body>
-    <input type="range" id="slider1" min="0" max="100" value="30">
-    <p id="slider1-value">X = 30</p>
-    <input type="range" id="slider2" min="0" max="100" value="60">
-    <p id="slider2-value">Y = 60</p>
+    <div id="canvas"></div>
+    <div>
+        <input type="range" id="slider1" min="0" max="100" value="30">
+        <p id="slider1-value">X = 30</p>
+        <input type="range" id="slider2" min="0" max="100" value="60">
+        <p id="slider2-value">Y = 60</p>
+    </div>
+    <div>
+        <button id="buttonClear">Clear</button>
+        <button id="buttonFill">Fill</button>
+        <button id="buttonToggle">Toggle</button>
+    </div>
     <script src="sketch.js"></script>
 </body>
 
